# Repka-ant-mcu

01-blink/: main.c
02-control/: CMakeLists.txt  main.c
02-control/led-task/: led-task.c  led-task.h
02-control/protocol-task/: protocol-task.c  protocol-task.h
02-control/stdio-task/: stdio-task.c
02-echo/: CMakeLists.txt  main.c
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/mem-wmem-task/: mem-wmem-task.c
03-adc/protocol-task/: protocol-task.c
04-bme/: CMakeLists.txt  main.c
04-bme/python/: bme280_plot.py
04-bme/stdio-task/: stdio-task.c
05-display/: CMakeLists.txt  disp_image.py  main.c
05-display/mem-wmem-task/: mem-wmem-task.h
06-device/: CMakeLists.txt  main.c
06-device/bme280-task/: bme280-task.c  bme280-task.h
06-device/display-task/: display-task.c  display-task.h
06-device/gui-task/: gui-task.c  gui-task.h
06-device/mem-wmem-task/: mem-wmem-task.c
libs/bme280-driver/: CmakeLists.txt
libs/bme280-driver/include/: bme280-driver.h  bme280-regs.h
libs/bme280-driver/src/: bme280-driver.c
libs/ili9341-driver/: CMakeLists.txt
libs/ili9341-driver/include/: ili9341-display.h  ili9341-driver.h
libs/ili9341-driver/src/: ili9341-driver.c
libs/protocol/: CmakeLists.txt
